Bug fix: z-index for scroll-shadow changed from 10000 -> 1000

--- a/src/jquery-scroll-container.scss
+++ b/src/jquery-scroll-container.scss
@@ -299,7 +299,7 @@ COLOR AND OPACITY
             position  : absolute;
             display   : none;
             background: transparent;
-            z-index   : 10000;
+            z-index   : 1000;
             transition: box-shadow 0.1s linear;
         }
     }
